assets/sass/blocks/pages.sass
.block-pages
    .page-categories
        margin-top: $spacing-1
        order: -1
        row-gap: $spacing-1
        @include media-breakpoint-up(desktop)
            margin-top: space(5)
        li a
            @extend .button
            @extend .button--small
            line-height: 1
    .page-title
        order: -2
    .media
        order: -3 !important
    &--cards
        .card
            align-items: flex-start
            border: 5px solid var(--color-accent)
            padding: space(8) space(8) space(6)
            .media
                margin-top: 0
                picture
                    margin-bottom: space(10)
                    &:not(.is-svg)
                        margin-top: -(space(8))
                    @include media-breakpoint-up(desktop)
                        &.is-svg
                            width: columns(1.5)
            .more
                align-items: flex-end
                flex: 1
                margin-top: auto
                position: relative
                &::after
                    content: '→'
                    opacity: 1
                    font-family: inherit
                    font-size: inherit
                    right: -(space())
                    transform: translate(100%, -25%)
            &:hover 
                .more::after
                    transform: translate(120%, -25%)
                picture.is-svg
                    filter: brightness(200)
    &--grid
        .grid
            article
                .page-title
                    a::after
                        content: '→' !important
                        display: inline !important
                        font-family: inherit !important
                        opacity: 0
                        padding-left: space()
                    @include media-breakpoint-up(desktop)
                        + p
                            margin-top: space(8)
                &:hover .page-title a::after
                    opacity: 1
                    padding-left: space(2)
    &--large
        .page
            .page-content
                .page-title 
                    @include h3
                    a
                        text-decoration: none
                .more
                    @include body-text
                    margin-top: auto
                    text-decoration: underline
                    text-underline-offset: 2px
                    &::after
                        content: '↗'
                        font-family: inherit
                        padding-left: space()
                &:hover .more::after
                    transform: translate(space(), -(space()))
            .media 
                img
                    aspect-ratio: 16/9
                @include media-breakpoint-up(desktop)
                    picture.is-svg img
                        object-fit: none
                        object-position: top left
            @include in-page-without-sidebar
                align-items: stretch
                .page-content
                    display: flex
                    flex-direction: column
                    width: columns(6)
                .media
                    margin-bottom: 0

